Fixed bug that made app not work correctly for firmware 0.8.37+
Fixed bug that made app not work correctly for firmware 0.8.37+. Added
trigger
cards and tokens for power change and tariff change. Added condition
card for
tariff change. Added ledring screensaver. Changed meter power to wH
instead of
kWh to match Homey firmware 0.8.35+. Improved connection validation
after
successful pairing. Some code optimizations.

--- a/drivers/smilep1/pair/pair.html
+++ b/drivers/smilep1/pair/pair.html
@@ -65,7 +65,7 @@ $(function(){
 					name: "Smile_"+smileId,
 					smileIp: smileIp,
 					smileId: smileId,
-					readings: result
+					readings: result //JSON result while pairing is permanently stored in Homey device
 				};
 
 				Homey.addDevice({
