--- a/drivers/smilep1/pair/pair.html
+++ b/drivers/smilep1/pair/pair.html
@@ -9,14 +9,14 @@
 	<div class="setting">
 		<p data-i18n="pair.instructions" class="instructions">Instructions</p>
 
-		<label class="settings-item-description" data-i18n="pair.host">host</label>
-		<div class="settings-itemgroup">
-			<input id="host" type="text" value="">
-		</div>
-
 		<label class="settings-item-description" data-i18n="pair.password">password</label>
 		<div class="settings-itemgroup">
 			<input id="password" type="text" value="">
+		</div>
+
+		<label class="settings-item-description" data-i18n="pair.host">host</label>
+		<div class="settings-itemgroup">
+			<input id="host" type="text" value="" placeholder="Auto-discover">
 		</div>
 
 		<label class="settings-item-description" data-i18n="pair.includeMeters">Meters</label>
