--- a/drivers/smilep1/pair/pair.html
+++ b/drivers/smilep1/pair/pair.html
@@ -4,6 +4,10 @@
 	<link rel="stylesheet" type="text/css" href="styles.css" />
 	<script type="text/javascript" src="/manager/webserver/assets/js/jquery.js"></script>
 	<script type="text/javascript" src="pair.js" data-origin="pair"></script>
+	<style>
+		/* place on top of Homey navigation window */
+		#hy-views { position: static; }
+	</style>
 </head>
 <body>
 	<div class="setting">
